# backend/controller/user.go
@@ -8,14 +8,14 @@ import (
 	"gorm.io/gorm"
 )
 
-// ListUsers lists all existing accounts
-//  @Summary      List users
-//  @Description  get users
-//  @Tags         User
-//  @Accept       json
-//  @Produce      json
-//  @Success      200  {array}   model.PostUser
-//  @Router       /user [get]
+// GetUsers lists all existing user accounts
+// @Summary List users
+// @Description Get a list of users
+// @Tags User
+// @Accept json
+// @Produce json
+// @Success 200 {array} model.PostUser
+// @Router /user [get]
 func GetUsers(db *gorm.DB,c *gin.Context) {
 	var users []model.User
 	result := db.Find(&users)
@@ -26,6 +26,15 @@ func GetUsers(db *gorm.DB,c *gin.Context) {
 	c.AsciiJSON(http.StatusOK, users)
 }
 
+// PostUser creates a new user account
+// @Summary Create user
+// @Description Create a new user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param user body string true "User"
+// @Success 200 {object} string
+// @Router /user [post]
 func PostUser(db *gorm.DB, c *gin.Context) {
 	var user model.User
 	c.BindJSON(&user)
